--- a/templates/config-map3et.json
+++ b/templates/config-map3et.json
@@ -328,6 +328,7 @@
                 "format": "s32",
                 "scale": 0.00512,
                 "round_to": 0.01,
+                "enabled": false,
                 "group": "l1"
             },
             {
@@ -393,6 +394,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l1"
             },
             {
@@ -404,6 +406,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l1"
             },
             {
@@ -521,6 +524,7 @@
                 "format": "s32",
                 "scale": 0.00512,
                 "round_to": 0.01,
+                "enabled": false,
                 "group": "l2"
             },
             {
@@ -586,6 +590,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l2"
             },
             {
@@ -597,6 +602,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l2"
             },
             {
@@ -714,6 +720,7 @@
                 "format": "s32",
                 "scale": 0.00512,
                 "round_to": 0.01,
+                "enabled": false,
                 "group": "l3"
             },
             {
@@ -779,6 +786,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l3"
             },
             {
@@ -790,6 +798,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "l3"
             },
             {
@@ -840,6 +849,7 @@
                 "format": "s32",
                 "scale": 0.00512,
                 "round_to": 0.01,
+                "enabled": false,
                 "group": "total"
             },
             {
@@ -905,6 +915,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "total"
             },
             {
@@ -916,6 +927,7 @@
                 "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
+                "enabled": false,
                 "group": "total"
             },
             {
