--- a/templates/config-map12h-fw2-all-harmonics.json
+++ b/templates/config-map12h-fw2-all-harmonics.json
@@ -115,7 +115,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel1_l1",
                 "order": 3
             },
@@ -148,7 +148,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel1_l2",
                 "order": 3
             },
@@ -181,7 +181,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel1_l3",
                 "order": 3
             },
@@ -214,7 +214,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel2_l1",
                 "order": 3
             },
@@ -247,7 +247,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel2_l2",
                 "order": 3
             },
@@ -280,7 +280,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel2_l3",
                 "order": 3
             },
@@ -313,7 +313,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel3_l1",
                 "order": 3
             },
@@ -346,7 +346,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel3_l2",
                 "order": 3
             },
@@ -379,7 +379,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel3_l3",
                 "order": 3
             },
@@ -412,7 +412,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel4_l1",
                 "order": 3
             },
@@ -445,7 +445,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel4_l2",
                 "order": 3
             },
@@ -478,7 +478,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "channel4_l3",
                 "order": 3
             }
@@ -10536,8 +10536,7 @@
                 "Frequency": "Частота",
                 "Serial": "Серийный номер",
                 "Supply voltage": "Напряжение 5 В",
-                "Uptime": "Время работы с момента включения (с)",
-                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
+                "Uptime": "Время работы с момента включения (с)"
             }
         }
     }
