--- a/templates/config-mst-24.json
+++ b/templates/config-mst-24.json
@@ -5,6 +5,7 @@
   "device": {
     "name": "MST24/NT60",
     "id": "mst24_v1",
+    "guard_interval_us": 500,
     "groups": [
       {
         "title": "General",
@@ -17,10 +18,6 @@
       {
         "title": "Settings",
         "id": "settings"
-      },
-      {
-        "title": "Debug",
-        "id": "debug"
       }
     ],
     "setup": [
@@ -262,7 +259,7 @@
         "reg_type": "holding",
         "address": 93,
         "format": "u16",
-        "group": "general",
+        "group": "hw_info",
         "enabled": false,
         "readonly": true
       }
@@ -270,11 +267,6 @@
     "translations": {
       "en": {
         "mst24_title": "Oven (Meyertec) MST-24/Rtelligent NT60 Stepper Driver",
-        "Current": "Load Current",
-        "general": "General",
-        "hw_info": "HW Info",
-        "settings": "Settings",
-        "debug": "Debug",
         "work_mode": "Work Mode",
         "drive_mode": "Drive Mode",
         "motor_type": "Motor Type",
@@ -292,19 +284,14 @@
         "c_r_acceleration": "Const Rot Acceleration",
         "c_r_deceleration": "Const Rot Deceleration",
         "c_r_speed": "Const Rot Speed",
-        "c_r_emergency_deceleration": "Const Rot Emerg Deceleration",
-        "mA": "мА",
-        "no": "No",
-        "yes": "Yes",
-        "start": "Start",
-        "stop": "Stop"
+        "c_r_emerg_deceleration": "Const Rot Emerg Deceleration",
+        "model": "Model"
       },
       "ru": {
         "mst24_title": "Драйвер шагового двигателя ОВЕН (Meyertec) MST-24/Rtelligent NT60",
-        "general": "Общее",
-        "hw_info": "Данные модуля",
-        "settings": "Настройки",
-        "debug": "Диагностика",
+        "General": "Общее",
+        "HW Info": "Данные модуля",
+        "Settings": "Настройки",
         "work_mode": "Режим работы драйвера",
         "drive_mode": "Обратная связь",
         "Return": "Возврат на исходную позицию",
@@ -318,7 +305,7 @@
         "motor_type": "Тип мотора",
         "2-Phase": "Двухфазный",
         "3-Phase": "Трёхфазный",
-        "current_limit": "Ограничение тока двигателя, мА",
+        "current_limit": "Ограничение тока двигателя (мА)",
         "errors": "Ошибки",
         "status": "Состояние",
         "voltage": "Напряжение питания",
@@ -343,12 +330,8 @@
         "c_r_acceleration": "Ускорение постоянного вращения",
         "c_r_deceleration": "Замедление постоянного вращения",
         "c_r_speed": "Скорость постоянного вращения",
-        "c_r_emergency_deceleration": "Замедление экстренного останова",
-        "mA": "мА",
-        "No": "Нет",
-        "Yes": "Да",
-        "Start": "Старт",
-        "Stop": "Стоп"
+        "c_r_emerg_deceleration": "Замедление экстренного останова",
+        "model": "Модель"
       }
     }
   }
