MAP templates add missing phase voltage error_value

--- a/templates/config-map12h-all-harmonics.json
+++ b/templates/config-map12h-all-harmonics.json
@@ -103,6 +103,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -604,6 +605,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -1105,6 +1107,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
