--- a/templates/config-map12h-fw2-all-harmonics.json
+++ b/templates/config-map12h-fw2-all-harmonics.json
@@ -659,6 +659,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -669,6 +670,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -679,6 +681,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
