--- a/templates/config-map12h-fw2-basic.json
+++ b/templates/config-map12h-fw2-basic.json
@@ -600,6 +600,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -610,6 +611,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -620,6 +622,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
