--- a/templates/config-map12h.json
+++ b/templates/config-map12h.json
@@ -228,6 +228,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -238,6 +239,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -248,6 +250,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
