--- a/templates/config-map3e.json
+++ b/templates/config-map3e.json
@@ -66,6 +66,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l1"
             },
             {
@@ -190,6 +191,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l2"
             },
             {
@@ -314,6 +316,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l3"
             },
             {
