--- a/templates/config-map3h-fw2-harmonics.json
+++ b/templates/config-map3h-fw2-harmonics.json
@@ -308,6 +308,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l1"
             },
             {
@@ -318,6 +319,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l2"
             },
             {
@@ -328,6 +330,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l3"
             },
             {
