--- a/templates/config-map3h-fw2.json
+++ b/templates/config-map3h-fw2.json
@@ -314,6 +314,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l1"
             },
             {
@@ -324,6 +325,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l2"
             },
             {
@@ -334,6 +336,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "l3"
             },
             {
