--- a/templates/config-map12h-harmonics.json
+++ b/templates/config-map12h-harmonics.json
@@ -223,6 +223,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -233,6 +234,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
@@ -243,6 +245,7 @@
                 "format": "s16",
                 "scale": 0.1,
                 "round_to": 0.01,
+                "error_value": "0x7FFF",
                 "group": "general"
             },
             {
