--- a/templates/config-engo-efan.json
+++ b/templates/config-engo-efan.json
@@ -248,7 +248,7 @@
                 "working_status_enum136":"Охлаждение",
                 "working_status_enum8":"Ошибка датчика",
                 "temp_sens_internal":"Температура: внутренний датчик",
-                "fan_status":"Состоние вентилятора",
+                "fan_status":"Вентилятор",
                 "fan_status_enum0":"Ручное управление - отключено",
                 "fan_status_enum1":"Ручное управление - низкая скорость вентилятора",
                 "fan_status_enum2":"Ручное управление - средняя скорость вентилятора",
