refactor: delete emoji

--- a/templates/config-ventmash-colibri-650.json
+++ b/templates/config-ventmash-colibri-650.json
@@ -171,12 +171,12 @@
         "HW Info": "HW Info",
         "Settings": "Settings",
         "unit_status": "Status",
-        "Off": "🔴Is disabled",
-        "On": "🟢Is enabled",
-        "Turns Off": "🟡Turns Off...",
-        "Turns On": "🟡Turns On...",
+        "Off": "Is disabled",
+        "On": "Is enabled",
+        "Turns Off": "Turns Off...",
+        "Turns On": "Turns On...",
         "errors": "Error status",
-        "no_error": "🟢No errors",
+        "no_error": "No errors",
         "error_register_dec":"Еrror register DEC",
         "unit_on": "Turn On",
         "unit_off": "Turn Off",
@@ -186,15 +186,15 @@
         "temperature_2": "Outdoor Temperature",
         "temperature_3": "Room Temperature",
         "humidity": "Room Humidity",
-        "T>Tset": "🟡Temp is higher than set!",
-        "T<Tset":"🟡Temp is less than set!",
-        "FIRE":"🔴Fire!",
-        "Heater_overheat":"🔴Heater overheat!",
-        "External_stop":"🟡External stop!",
-        "Short_Toutdoor":"🔴Short T outdoor!",
-        "Breakage_Toutdoor":"🔴Breakage T outdoor!",
-        "Short_Tindoor":"🔴Short T indoor!",
-        "Breakage_Tindoor":"🔴Breakage T indoor!"
+        "T>Tset": "Temp is higher than set!",
+        "T<Tset":"Temp is less than set!",
+        "FIRE":"Fire!",
+        "Heater_overheat":"Heater overheat!",
+        "External_stop":"External stop!",
+        "Short_Toutdoor":"Short T outdoor!",
+        "Breakage_Toutdoor":"Breakage T outdoor!",
+        "Short_Tindoor":"Short T indoor!",
+        "Breakage_Tindoor":"Breakage T indoor!"
       },
       "ru": {
         "ventmashine_colibri_650_title": "VentMachine Colibri 650 GTC",
@@ -202,12 +202,12 @@
         "HW Info": "Данные модуля",
         "Settings": "Настройки",
         "unit_status": "Cтатус работы установки",
-        "Off": "🔴Выключена",
-        "On": "🟢Включена",
-        "Turns Off": "🟡Выключается...",
-        "Turns On": "🟡Включается...",
+        "Off": "Выключена",
+        "On": "Включена",
+        "Turns Off": "Выключается...",
+        "Turns On": "Включается...",
         "errors": "Статус ошибки",
-        "no_error": "🟢Ошибок нет",
+        "no_error": "Ошибок нет",
         "error_register_dec":"Регистр ошибок DEC",
         "unit_on": "Включить",
         "unit_off": "Выключить",
@@ -217,15 +217,15 @@
         "temperature_2": "Температура на улице",
         "temperature_3": "Температура в помещении",
         "humidity": "Влажность в помещении",
-        "T>Tset": "🟡Темп. больше заданной!",
-        "T<Tset":"🟡Темп. меньше заданной!",
-        "FIRE":"🔴Пожар!",
-        "Heater_overheat":"🔴Перегрев калорифера!",
-        "External_stop":"🟡Внешний стоп!",
-        "Short_Toutdoor":"🔴Замыкание Т наружн!",
-        "Breakage_Toutdoor":"🔴Обрыв Т наружн!",
-        "Short_Tindoor":"🔴Замыкание Т канала!",
-        "Breakage_Tindoor":"🔴Обрыв Т канала!"
+        "T>Tset": "Темп. больше заданной!",
+        "T<Tset":"Темп. меньше заданной!",
+        "FIRE":"Пожар!",
+        "Heater_overheat":"Перегрев калорифера!",
+        "External_stop":"Внешний стоп!",
+        "Short_Toutdoor":"Замыкание Т наружн!",
+        "Breakage_Toutdoor":"Обрыв Т наружн!",
+        "Short_Tindoor":"Замыкание Т канала!",
+        "Breakage_Tindoor":"Обрыв Т канала!"
       }
     }
   }
